# full-stack-fastapi-template

./: .env.example  .gitignore  AGENTS.md  README.md  compose.intranet.yml  compose.override.yml  compose.traefik.yml  compose.yml  pyproject.toml  skills-lock.json
backend/: AGENTS.md  Dockerfile  README.md  alembic.ini  langgraph.json  pyproject.toml
backend/app/: crud.py  initial_data.py  main.py  models.py  utils.py
backend/app/ai/: __init__.py
backend/app/ai/agents/: __init__.py
backend/app/ai/shared/: __init__.py  checkpoints.py  providers.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 2026-03-14_initialize_models_0001.py  2026-06-06_initialize_users.py
backend/app/api/: deps.py  main.py
backend/app/api/auth/: router.py  schemas.py  service.py
backend/app/api/common/: private.py  utils.py
backend/app/api/items/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/commands/: initial_data.py  wait_for_db.py
backend/app/common/: __init__.py  base_model.py  base_schema.py  email.py  exceptions.py  models.py  pagination.py  time.py
backend/app/core/: config.py  database.py  db.py  email.py  exceptions.py  models.py  pagination.py  security.py
backend/app/items/: constants.py  dependencies.py  exceptions.py  models.py  service.py
backend/app/middleware/: exception.py  logging.py  request_id.py
backend/app/users/: constants.py  dependencies.py  exceptions.py  models.py  service.py
backend/scripts/: format.sh  lint.sh  prestart.sh  test.sh  tests-start.sh
backend/tests/: conftest.py  factories.py
backend/tests/ai/: __init__.py  conftest.py  test_graphs.py  test_providers.py  test_settings.py
backend/tests/api/: test_login.py  test_system.py  test_users.py
backend/tests/core/: test_email.py  test_exceptions.py  test_pagination.py
backend/tests/crud/: test_user.py
backend/tests/modules/: test_users_service.py
backend/tests/scripts/: test_initial_data.py  test_migrations.py  test_wait_for_db.py
backend/tests/services/: test_user.py
backend/tests/utils/: database.py  item.py  user.py  utils.py
(+130 files in other folders)
